# finsight

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy.yml  docs.yml  release.yml
docs/: implementation-plan.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_enable_pgvector.py
planning/: implementation-plan.md
search/: search_index.json
src/finsight/: __init__.py  app.py  config.py  logging_config.py
tests/: test_ci_canary.py  test_health.py  test_logging_config.py  test_package_metadata.py
