[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finsight"
dynamic = ["version"]
description = "Earnings intelligence from SEC EDGAR filings — ML signal rankings, RAG-grounded Q&A, and production MLOps."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "asyncpg>=0.30",
    "redis>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4",
    "httpx>=0.28",
]

[tool.hatch.version]
path = "src/finsight/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/finsight"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src/finsight", "tests"]

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.report]
fail_under = 90
